2007-10-11  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.99.0-2 release]

	* debian/changelog:
	* debian/control: Updating gtk dep.

2007-10-10  Mohammad Anwari  <Mohammad.Anwari@nokia.com>

	* configure.ac, pkgconfig/hildon-1.pc: Turn on -DMAEMO_CHANGES only if
	USE_MAEMO_GTK is enabled.

2007-10-10  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-code-dialog.c (hildon_code_dialog_init): check for
	MAEMO_GTK or GTK+ > 2.11 before using GTK_BUTTONBOX_CENTER mode.

2007-10-10  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.99.0-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2007-10-10  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-logical-color-example.c:
	* src/hildon-helper.c: Fixing the way logical colors/fonts are being
	applied + adding a test case. Fixes: NB#71660.

2007-10-08  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-window.c (hildon_window_map): only map the vbox if it's supposed
	to be visible, fixes warning on map for windows without toolbars.

2007-10-02  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-seekbar.c: gtk_range_get_fill_level is available in GTK+ since
	2.11.0, add a check for that besides the MAEMO_GTK check.

2007-09-28  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.17-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2007-09-26  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-window.c: Applying patches by Xan to fix the toolbar
	visibility. Fixes: NB#70842 and MB#615.

2007-09-25  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-widget.c (hildon_bread_crumb_widget_constructor):
	set the separator as no-show-all so it doesn't unintentionally appear when
	someone does a show_all.

2007-09-25  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.c (hildon_bread_crumb_trail_push_text)