@@ -1,3 +1,12 @@
+2007-11-08  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
+	Patch by Alejandro to get/set passwords dialogs accesibility.
+
+	* hildon-1/src/hildon-get-password-dialog.c:
+	* hildon-1/src/hildon-set-password-dialog.c: 
+	Set atk_set_name to the passwd entries in order to allow 
+	accessibility by name on this entries.
+	
 2007-10-11  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
 	[1.99.0-2 release]
